--- a/Exercicio-ListaDeTarefas/index.html
+++ b/Exercicio-ListaDeTarefas/index.html
@@ -8,8 +8,8 @@
     <title>Lista de Tarefas</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="node_modules/mdb-ui-kit/css/mdb.dark.min.css">
-    <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.css">
+    <link rel="stylesheet" href="../node_modules/mdb-ui-kit/css/mdb.dark.min.css">
+    <link rel="stylesheet" href="../node_modules/@fortawesome/fontawesome-free/css/all.css">
     <link rel="stylesheet" href="estilos.css">
 
     <!-- JS -->
